--- a/k8s/app-a.yml
+++ b/k8s/app-a.yml
@@ -20,9 +20,9 @@ spec:
       labels:
         app: app-a
         version: v1
-      annotations:
-        sidecar.opentelemetry.io/inject: "true"
-        instrumentation.opentelemetry.io/inject-java: "true"
+      #annotations:
+      #  sidecar.opentelemetry.io/inject: "true"
+      #  instrumentation.opentelemetry.io/inject-java: "true"
     spec:
       containers:
         - image: quay.io/nlembers/distributed-tracing-app-a:latest
