--- a/k8s/app-b.yml
+++ b/k8s/app-b.yml
@@ -31,6 +31,8 @@ spec:
           env:
             - name: PORT
               value: "8080"
+            - name: APP_C
+              value: "http://app-c:8080"
           ports:
             - containerPort: 8080
               name: http
