--- a/k8s/base/app-c.yml
+++ b/k8s/base/app-c.yml
@@ -2,37 +2,34 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: app-a
-    app.kubernetes.io/component: app-a
-    app.kubernetes.io/instance: app-a
+    app: app-c
+    app.kubernetes.io/component: app-c
+    app.kubernetes.io/instance: app-c
     app.kubernetes.io/part-of: apps
     app.openshift.io/runtime: redhat
-  name: app-a
+  name: app-c
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: app-a
+      app: app-c
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: app-a
+        app: app-c
         version: v1
-      annotations:
-        sidecar.opentelemetry.io/inject: "false"
-        instrumentation.opentelemetry.io/inject-java: "false"
     spec:
       containers:
-        - image: quay.io/nlembers/distributed-tracing-app-a:latest
+        - image: quay.io/nlembers/distributed-tracing-app-c:latest
           imagePullPolicy: Always
-          name: app-a
+          name: app-c
           env:
-            - name: PORT
+            - name: QUARKUS_HTTP_PORT
               value: "8080"
-            - name: APP_B
-              value: "http://app-b:8080"
+            - name: QUARKUS_OTEL_TRACES_SAMPLER_ARG
+              value: "0.0"
           ports:
             - containerPort: 8080
               name: http
@@ -50,8 +47,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: app-a
-  name: app-a
+    app: app-c
+  name: app-c
 spec:
   ports:
     - name: http
@@ -59,21 +56,6 @@ spec:
       protocol: TCP
       targetPort: 8080
   selector:
-    app: app-a
+    app: app-c
   sessionAffinity: None
   type: ClusterIP
----
-apiVersion: route.openshift.io/v1
-kind: Route
-metadata:
-  labels:
-    app: app-a
-  name: app-a
-spec:
-  port:
-    targetPort: http
-  to:
-    kind: Service
-    name: app-a
-    weight: 100
-  wildcardPolicy: None
