--- a/k8s/infra/tempostack.yml
+++ b/k8s/infra/tempostack.yml
@@ -1,13 +1,28 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  name: s3-bucket
+  namespace: tempostack
+stringData:
+  endpoint: http://s3.openshift-storage.svc
+  bucket: "tempostorage"
+  access_key_id: ${AWS_ACCESS_KEY_ID}
+  access_key_secret: ${AWS_SECRET_ACCESS_KEY}
+type: Opaque
+---
 apiVersion: tempo.grafana.com/v1alpha1
 kind: TempoStack
 metadata:
   name: tempostack
+  namespace: tempostack
 spec:
   storageSize: 1Gi
   storage:
     secret:
-      name: minio
+      name: s3-bucket
       type: s3
+    tls:
+      enabled: false
   resources:
     total:
       limits:
