--- a/apps/app-b/Containerfile
+++ b/apps/app-b/Containerfile
@@ -1,5 +1,5 @@
 # Build
-FROM registry.access.redhat.com/ubi9/openjdk-17 as builder
+FROM --platform=linux/amd64 registry.access.redhat.com/ubi9/openjdk-17 as builder
 
 COPY pom.xml .
 COPY src src
@@ -7,7 +7,7 @@ COPY src src
 RUN mvn -B package
 
 # Run
-FROM registry.access.redhat.com/ubi9/openjdk-17-runtime
+FROM --platform=linux/amd64 registry.access.redhat.com/ubi9/openjdk-17-runtime
 
 COPY --from=builder /home/default/target/app-b-1.0.0-SNAPSHOT-jar-with-dependencies.jar /home/default/app-b.jar
 
