--- a/apps/app-c/Containerfile
+++ b/apps/app-c/Containerfile
@@ -1,5 +1,5 @@
 # Build
-FROM registry.access.redhat.com/ubi9/openjdk-17 as builder
+FROM --platform=linux/amd64 registry.access.redhat.com/ubi9/openjdk-17 as builder
 
 COPY pom.xml .
 COPY src src
@@ -7,7 +7,7 @@ COPY src src
 RUN mvn package
 
 # Run
-FROM registry.access.redhat.com/ubi8/openjdk-21:1.18
+FROM --platform=linux/amd64 registry.access.redhat.com/ubi8/openjdk-21:1.18
 
 COPY --from=builder --chown=185 /home/default/target/quarkus-app/lib/ /deployments/lib/
 COPY --from=builder --chown=185 /home/default/target/quarkus-app/*.jar /deployments/
