--- a/k8s/infra/tempostack.yml
+++ b/k8s/infra/tempostack.yml
@@ -28,11 +28,55 @@ spec:
       limits:
         memory: 2Gi
         cpu: 2000m
+  tenants:
+    mode: openshift
+    authentication:
+      - tenantName: demo
+        tenantId: "demo-tenant"
   template:
+    gateway:
+      enabled: true
     queryFrontend:
       jaegerQuery:
-        enabled: true
-        ingress:
-          route:
-            termination: edge
-          type: route
+        enabled: false
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: tempostack-traces-reader
+rules:
+  - apiGroups:
+      - 'tempo.grafana.com'
+    resources:
+      - demo
+    resourceNames:
+      - traces
+    verbs:
+      - 'get'
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: tempostack-traces-reader
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: tempostack-traces-reader
+subjects:
+  - kind: Group
+    apiGroup: rbac.authorization.k8s.io
+    name: system:authenticated
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: view
+  namespace: tempostack
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: view
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: tempostack
