--- a/apps/app-c/src/main/resources/application.properties
+++ b/apps/app-c/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 quarkus.application.name=app-c
 
+quarkus.package.jar.type=uber-jar
+quarkus.native.enabled=false
+
 quarkus.http.host=0.0.0.0
 quarkus.http.port=8082
 java.util.logging.manager=org.jboss.logmanager.LogManager
